Edited close X text and fixed styles, consequently removing editor container scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -795,6 +795,7 @@ article {
     height: 30px;
     position: absolute;
     right: 0;
+    text-indent: -9999em;
     top: 0;
     width: 30px; }
     article header a.post-close-link:hover {
